# fastapi_miniproject

./: db.sqlite3  main.py  pyproject.toml
car/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  car.py  db_helper.py
